Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -643,67 +643,81 @@ bind F3 selectw -t:12
 
 | Функция/Оператор                                          | GNU Screen | tmux       |
 |:----------------------------------------------------------|:----------:|:----------:|
-| Префикс команды по умолчанию <kbd>Ctrl</kbd>+<kbd>a</kbd> |     X      |            |
+| Префикс команд по умолчанию <kbd>Ctrl</kbd>+<kbd>a</kbd> |     X      |            |
 | Модель клиент-сервер                                      |            |      X     |
 | Панели это псевдотерминалы                                |            |      X     |        
 | Завершение области не уничтожает связанные с ней окна     |     X      |            |
 | Сеансы включают окна                                      |     X      |      X     |       
 | Сессии могут быть отключены                               |     X      |      X     |         
 
-2. Установите GNU Screen на свой компьютер (имя пакета: `screen`) и выполните следующие задачи: 
+2. Установите GNU Screen на свой компьютер(имя пакета: `screen`) и выполните следующие задачи: 
 * Запустить программу. Какую команду вы используете?  
 `screen`
+
 * Запустите `top`:  
 `top`
+
 * Используя префикс команд `screen`, откройте новое окно; затем откройте `/etc/screenrc` с помощью `vi`:  
-<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>c</kbd>
+<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>c</kbd>  
 `vi /etc/screenrc`
+
 * Перечислите окна внизу экрана:  
 <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>w</kbd>
-* Измените имя текущего окна на `vi`: 
+
+* Измените имя текущего окна на `vi`:  
 <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>A</kbd>. Затем мы должны набрать `vi` и нажать <kbd>Enter</kbd>.
+
 * Измените название оставшегося окна на `top`. Для этого сначала отобразите список всех окон, чтобы вы могли перемещаться вверх и вниз и выбирать нужное:  
 <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>"</kbd>  
 <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>A</kbd>. Затем мы должны набрать `topi` и нажать <kbd>Enter</kbd>.
-* Убедитесь, что имена изменились, снова отобразив имена окон в нижней части экрана: 
+
+* Убедитесь, что имена изменились, снова отобразив имена окон в нижней части экрана:  
 <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>w</kbd>
+
 * Теперь отключитесь от сессии и при помощи `screen` создайте новую с именем `ssh`:  
 <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>d</kbd>  
 `screen -S "ssh"`
-* Отключитесь также от `ssh` и отобразите на экране список сессий: 
-```
-```
-* Теперь подключитесь к первой сессии, используя его PID: 
-```
-```
-* Вы должны снова оказаться в верхней части окна. Разделите окно по горизонтали и перейдите в новую пустую область: 
-```
-```
-* Отобразите список всех окон на экране и выберите `vi`, который будет отображаться в новой пустой области: 
-```
-```
+
+* Отключитесь также от `ssh` и отобразите на экране список сессий:  
+<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>d</kbd>  
+<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>w</kbd>
+
+* Теперь подключитесь к первой сессии, используя его PID:  
+`screen -r PID-OF-SESSION`
+
+* Вы должны снова вернуться в окно отображающее `top`. Разделите окно по горизонтали и перейдите в новую пустую область:  
+<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>S</kbd>  
+<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>TAB</kbd>
+
+* Отобразите список всех окон на экране и выберите `vi`, который будет отображаться в новой пустой области:  
+Используйте <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>"</kbd>, чтобы отобразить список всех окон, выберите `vi` и нажмите <kbd>Enter</kbd>.
+
 * Теперь разделите текущую область по вертикали, перейдите во вновь созданную пустую область и свяжите ее с совершенно новым окном: 
-```
-```
-* Завершить все области, кроме текущей (помните, что, хотя вы завершаете области, их окна все еще продолжают работать). Затем выйдите из всех окон текущей сессии, пока сама сессия не будет завершена: 
-```
-```
-* Наконец, еще раз просмотрите список своих сессий на экране, завершите оставшуюся сессию `ssh` по `PID` и убедитесь, что на самом деле сессий не осталось:
-```
-```
+<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>|</kbd>  
+<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>TAB</kbd>  
+<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>c</kbd>
+
+* Завершить все области, кроме текущей(помните, что, хотя завершая области, их окна все еще продолжат работать). Затем выйдите из всех окон текущей сессии, пока сама сессия не будет завершена: 
+<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>Q</kbd>   
+`exit`(to exit Bash).  
+<kbd>Shift</kbd>+<kbd>:</kbd>, затем набираем `quit` и нажимаем <kbd>Enter</kbd>(чтобы выйти из `vi`). После этого мы набираем `exit`(чтобы выйти из базовой оболочки `Bash`) `q`(чтобы завершить `top`); затем мы набираем `exit`(чтобы выйти из базовой оболочки `Bash`).
+
+* Наконец, еще раз просмотрите список сессий `screen` , завершите оставшуюся сессию `ssh` по `PID` и убедитесь, что на самом деле сессий не осталось:  
+`screen -list` or `screen -ls`
+`screen -S PID-OF-SESSION -X quit`  
+`screen -list` or `screen -ls`
+
 3. Установите `tmux` на свой компьютер (имя пакета: `tmux`) и выполните следующие задачи: 
 * Запустить программу. Какую команду вы используете? 
-```
-```
-* Запустите `top` (обратите внимание, как через пару секунд название окна в строке состояния изменится на `top`): 
-```
-```
-* Используя префикс ключа `tmux`, откройте новое окно; 
-```
-```
-* затем создайте `~/.tmux.conf` с помощью `nano`: 
-```
-```
+`tmux`
+
+* Запустите `top`(обратите внимание, как через пару секунд название окна в строке состояния изменится на `top`): 
+`top`
+
+* Используя префикс ключа `tmux`, откройте новое окно; затем создайте `~/.tmux.conf` с помощью `nano`:  
+<kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>c</kbd>  
+`nano ~/.tmux.conf`
+
 * Разделите окно по вертикали и уменьшите размер вновь созданной панели в несколько раз: 
 ```
 ```
