--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -692,41 +692,45 @@ bind F3 selectw -t:12
 * Отобразите список всех окон на экране и выберите `vi`, который будет отображаться в новой пустой области:  
 Используйте <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>"</kbd>, чтобы отобразить список всех окон, выберите `vi` и нажмите <kbd>Enter</kbd>.
 
-* Теперь разделите текущую область по вертикали, перейдите во вновь созданную пустую область и свяжите ее с совершенно новым окном: 
+* Теперь разделите текущую область по вертикали, перейдите во вновь созданную пустую область и свяжите ее с совершенно новым окном:  
 <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>|</kbd>  
 <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>TAB</kbd>  
 <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>c</kbd>
 
-* Завершить все области, кроме текущей(помните, что, хотя завершая области, их окна все еще продолжат работать). Затем выйдите из всех окон текущей сессии, пока сама сессия не будет завершена: 
-<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>Q</kbd>   
+* Завершить все области, кроме текущей(помните, что, хотя завершая области, их окна все еще продолжат работать). Затем выйдите из всех окон текущей сессии, пока сама сессия не будет завершена:  
+<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>Q</kbd>  
 `exit`(to exit Bash).  
 <kbd>Shift</kbd>+<kbd>:</kbd>, затем набираем `quit` и нажимаем <kbd>Enter</kbd>(чтобы выйти из `vi`). После этого мы набираем `exit`(чтобы выйти из базовой оболочки `Bash`) `q`(чтобы завершить `top`); затем мы набираем `exit`(чтобы выйти из базовой оболочки `Bash`).
 
 * Наконец, еще раз просмотрите список сессий `screen` , завершите оставшуюся сессию `ssh` по `PID` и убедитесь, что на самом деле сессий не осталось:  
-`screen -list` or `screen -ls`
+`screen -list` or `screen -ls`  
 `screen -S PID-OF-SESSION -X quit`  
 `screen -list` or `screen -ls`
 
-3. Установите `tmux` на свой компьютер (имя пакета: `tmux`) и выполните следующие задачи: 
-* Запустить программу. Какую команду вы используете? 
+3. Установите `tmux` на свой компьютер (имя пакета: `tmux`) и выполните следующие задачи:
+* Запустить программу. Какую команду вы используете?  
 `tmux`
 
-* Запустите `top`(обратите внимание, как через пару секунд название окна в строке состояния изменится на `top`): 
+* Запустите `top`(обратите внимание, как через пару секунд название окна в строке состояния изменится на `top`):  
 `top`
 
 * Используя префикс ключа `tmux`, откройте новое окно; затем создайте `~/.tmux.conf` с помощью `nano`:  
 <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>c</kbd>  
 `nano ~/.tmux.conf`
 
-* Разделите окно по вертикали и уменьшите размер вновь созданной панели в несколько раз: 
-```
-```
-* Теперь измените имя текущего окна на `text editing`; затем пусть `tmux` отобразит список со всеми своими сессиями: 
-```
-```
-* Перейти к окну, запущенному сверху, и вернуться к текущему, используя ту же комбинацию клавиш: 
-```
-```
+* Разделите окно по вертикали и уменьшите размер вновь созданной панели в несколько раз:  
+<kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>%</kbd>  
+<kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>Ctrl</kbd>+<kbd>↓</kbd>
+
+* Теперь измените имя текущего окна на `text editing`; затем пусть `tmux` отобразит список со всеми своими сессиями:  
+<kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>,</kbd>. Затем мы вводим новое имя и нажимаем <kbd>Enter</kbd>.  
+<kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>s</kbd> или `tmux ls`.
+
+* Перейти к окну, в котором запущен `top`, и вернуться к текущему, используя ту же комбинацию клавиш:  
+<kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>n</kbd>  
+или  
+<kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>p</kbd>
+
 * Отключитесь от текущей сессии и создайте новую с именем `ssh` и именем окна `ssh window`: 
 ```
 ```
