Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -727,35 +727,30 @@ bind F3 selectw -t:12
 <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>s</kbd> или `tmux ls`.
 
 * Перейти к окну, в котором запущен `top`, и вернуться к текущему, используя ту же комбинацию клавиш:  
-<kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>n</kbd>  
-или  
-<kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>p</kbd>
+<kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>n</kbd> или <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>p</kbd>
 
-* Отключитесь от текущей сессии и создайте новую с именем `ssh` и именем окна `ssh window`: 
-```
-```
-* Отключитесь также от сессии `ssh` и `tmux` снова отобразит список сессий: 
-```
-```
->С этого момента упражнение требует, чтобы вы использовали удаленную машину для `ssh`-соединений с вашим локальным хостом (виртуальная машина вполне допустима и может оказаться действительно практичной). Убедитесь, что у вас установлен и запущен `openssh-server` на вашем локальном компьютере, и что хотя бы `openssh-client` установлен на удаленном компьютере. Теперь запустите удаленный компьютер и подключитесь через `ssh` к локальному хосту. 
+* Отключитесь от текущей сессии и создайте новую с именем `ssh` и именем окна `ssh window`:  
+<kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>d</kbd>. `tmux new -s "ssh" -n "ssh window"`
 
-* Как только соединение будет установлено, проверьте наличие сессий `tmux`: 
-```
-```
-* На удаленном хосте подключитесь к сеансу `ssh` по имени: 
-```
-```
-* Вернувшись на локальный компьютер, подключитесь к сеансу `ssh` по имени, убедившись, что соединение с удаленным хостом сначала разорвано: 
-```
-```
-* Отображение всех сеансов для выбора и переход к первому сеансу (`[0]`). 
-```
-```
-* Оказавшись там, завершите сессию `ssh` по имени: 
-```
-```
+* Отключитесь также от сессии `ssh`, а также при помощи `tmux` снова отобразите список сессий:  
+<kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>d</kbd>  
+`tmux ls`
+
+* Теперь запустите удаленную машину и подключитесь через `ssh` к локальному хосту. Как только соединение будет установлено, проверьте наличие сессий `tmux`:  
+На удаленном хосте: `ssh local-username@local-ipaddress`. `tmux ls`
+
+* На удаленном хосте подключитесь к сеансу `ssh` по имени:  
+`tmux a -t ssh` (`a` можно заменить на `at` или `attach`).
+
+* Вернувшись на локальный компьютер, подключитесь к сеансу `ssh` по имени, убедившись, что соединение с удаленным хостом сначала разорвано:  
+`tmux a -t -d ssh`(`a` можно заменить на `at` или `attach`).
+
+* Отобразите список всех сеансов для выбора и перейдите к вашему первому сеансу(`[0]`). Оказавшись там, завершите сессию `ssh` по имени: 
+Мы набираем <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>s</kbd>, используем клавиши со стрелками, чтобы отметить сессию `0`, и нажимаем <kbd>Enter</kbd>  
+`tmux kill-session -t ssh`.
+
 * Наконец, отключитесь от текущей сесии и завершите его по имени:
-```
-```
+<kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>d</kbd>
+`tmux kill-session -t ssh`.
 
 # Ответы на упражнения для размышления
