--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -643,7 +643,7 @@ bind F3 selectw -t:12
 
 | Функция/Оператор                                          | GNU Screen | tmux       |
 |:----------------------------------------------------------|:----------:|:----------:|
-| Префикс команд по умолчанию <kbd>Ctrl</kbd>+<kbd>a</kbd> |     X      |            |
+| Префикс команд по умолчанию <kbd>Ctrl</kbd>+<kbd>a</kbd>  |     X      |            |
 | Модель клиент-сервер                                      |            |      X     |
 | Панели это псевдотерминалы                                |            |      X     |        
 | Завершение области не уничтожает связанные с ней окна     |     X      |            |
@@ -745,12 +745,42 @@ bind F3 selectw -t:12
 * Вернувшись на локальный компьютер, подключитесь к сеансу `ssh` по имени, убедившись, что соединение с удаленным хостом сначала разорвано:  
 `tmux a -t -d ssh`(`a` можно заменить на `at` или `attach`).
 
-* Отобразите список всех сеансов для выбора и перейдите к вашему первому сеансу(`[0]`). Оказавшись там, завершите сессию `ssh` по имени: 
+* Отобразите список всех сеансов для выбора и перейдите к вашему первому сеансу(`[0]`). Оказавшись там, завершите сессию `ssh` по имени:  
 Мы набираем <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>s</kbd>, используем клавиши со стрелками, чтобы отметить сессию `0`, и нажимаем <kbd>Enter</kbd>  
 `tmux kill-session -t ssh`.
 
-* Наконец, отключитесь от текущей сесии и завершите его по имени:
+* Наконец, отключитесь от текущей сесии и завершите его по имени:  
 <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>d</kbd>
 `tmux kill-session -t ssh`.
 
+
 # Ответы на упражнения для размышления
+
+1. И `screen`, и `tmux` могут войти в режим командной строки через командный префикс+<kbd>:</kbd> (мы уже видели краткий пример с `tmux`). Проведите небольшое исследование и выполните следующие задачи в режиме командной строки: 
+* Перевести `screen` в режим копирования:  
+<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>:</kbd> - Затем мы набираем `copy`.
+
+* Заставьте `tmux` переименовать текущее окно:  
+<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>:</kbd> - Затем мы набираем `rename-window`.
+
+* Заставьте экран закрыть все окна и завершить сессию:  
+<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>:</kbd> - Затем мы набираем `quit`.
+
+* Сделайте так, чтобы `tmux` разделил панель на две части:  
+<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>:</kbd> - Затем мы набираем `split-window`.
+
+* Заставить `tmux` завершить текущее окно:  
+<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>:</kbd> - Затем мы набираем `kill-window`.
+
+2. Когда вы входите в режим копирования `screen`, вы можете не только использовать клавиши со стрелками и <kbd>PgUP</kbd> или <kbd>PgDown</kbd>, чтобы перемещаться по текущему окну и буферу прокрутки. Также существует возможность использования полноэкранного редактора в стиле `vi`. Используя этот редактор, выполните следующие задачи: 
+* Отправьте `supercalifragilisticexpialidocious` в ваш `screen` терминал:  
+`echo supercalifragilisticexpialidocious`
+
+* Теперь скопируйте последовательно идущих 5 символов(слева направо) в строку прямо над курсором:  
+Входим в режим копирования: <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>[</kbd> или <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>:</kbd> и затем набираем `copy`. Затем мы переходим к строке выше, используя `k`, и нажимаем <kbd>Пробел</kbd>, чтобы отметить начало выделения. Наконец, мы перемещаемся вперед на четыре символа с помощью `l` и снова нажимаем <kbd>Пробел</kbd>, чтобы отметить конец выделения.
+
+* Наконец, вставьте выделенное (`stice`) обратно в командную строку:  
+<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>]</kbd>
+
+3. Предположим, вы хотите поделиться сеансом `tmux` (`our_session`) с другим пользователем. Вы создали сокет (`/tmp/our_socket`) с нужными правами доступа, чтобы и вы, и другие пользователь могли читать и писать в него. Какие еще два условия должны быть выполнены, чтобы второй пользователь мог успешно подключиться к сеансу через `tmux -S /tmp/our_socket a -t our_session`?  
+У обоих пользователей должна быть общая группа, например `multiplexer`. Затем мы должны изменить сокет в эту группу: `chgrp multiplexer / tmp / our_socket`.
