--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -756,7 +756,7 @@ bind F3 selectw -t:12
 
 # Ответы на упражнения для размышления
 
-1. И `screen`, и `tmux` могут войти в режим командной строки через командный префикс+<kbd>:</kbd> (мы уже видели краткий пример с `tmux`). Проведите небольшое исследование и выполните следующие задачи в режиме командной строки: 
+1. И `screen`, и `tmux` могут войти в режим командной строки через *командный префикс*+<kbd>:</kbd> (мы уже видели краткий пример с `tmux`). Проведите небольшое исследование и выполните следующие задачи в режиме командной строки: 
 	* Перевести `screen` в режим копирования:  
 		
 		<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>:</kbd> - Затем мы набираем `copy`.
