Update 103.6 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.6 Modify process execution priorities/103.6 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.6 Modify process execution priorities/103.6 Lesson 1.md
@@ -59,6 +59,6 @@ F S   UID   PID  PPID  C PRI  NI ADDR SZ WCHAN  TTY          TIME CMD
 Также можно постоянно отслеживать процессы, которыми в настоящее время управляет ядро Linux, с помощью программы `top`. Как и в случае с `ps`, `top` также по-другому отображает значение приоритета. Чтобы упростить идентификацию процессов в реальном времени, `top` уменьшает значение приоритета на 100, тем самым делая все приоритеты в реальном времени отрицательными, а их идентифицирует отрицательное число или `rt`. Таким образом, обычные приоритеты отображаются верхним диапазоном от 0 до 39.
 
 > Чтобы получить более подробную информацию о команде `ps`, можно использовать дополнительные параметры. Сравните вывод этой команды с выводом из нашего предыдущего примера:  
-```
-console $ ps -e -o user,uid,comm,tty,pid,ppid,pri,pmem,pcpu --sort=-pcpu | head
+```console 
+$ ps -e -o user,uid,comm,tty,pid,ppid,pri,pmem,pcpu --sort=-pcpu | head
 ```
