Update 103.6 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.6 Modify process execution priorities/103.6 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.6 Modify process execution priorities/103.6 Lesson 1.md
@@ -14,18 +14,18 @@
 
 Фактически, только один процесс одновременно может управлять процессором. Однако большинство действий процесса являются системными вызовами, то есть выполняющийся процесс передает управление процессором процессу операционной системы, поэтому он выполняет запрошенную операцию. Системные вызовы отвечают за всю связь между устройствами, такую как распределение памяти, чтение и запись в файловых системах, печать текста на экране, взаимодействие с пользователем, сетевые передачи и т. д. Передача управления процессором во время системного вызова позволяет операционной системе решать, следует ли вернуть управление процессором предыдущему процессу или передать его другому процессу. Поскольку современные ЦП могут выполнять инструкции намного быстрее, чем большинство внешних устройств взаимодействуют друг с другом, новый процесс может занять большую часть процессорного времени, пока предыдущие запрошенные аппаратные ресурсы не освободятся. Чтобы обеспечить максимальное использование ЦП, многозадачные операционные системы поддерживают динамическую очередь активных процессов, ожидающих процессорное время.
 
-Хотя они позволяют значительно улучшить использование процессорного времени, полагаться только на системные вызовы для переключения между процессами недостаточно для достижения удовлетворительной производительности многозадачности. Процесс, не выполняющий системных вызовов, может бесконечно управлять процессором. Вот почему современные операционные системы также являются вытесняющими, то есть выполняемый процесс может быть снова помещен в очередь, чтобы более важный процесс мог управлять ЦП, даже если выполняющийся процесс не сделал системного вызова.
+Хотя системные вызовы и позволяют значительно улучшить использование процессорного времени, полагаться только на них для переключения между процессами недостаточно для достижения приемлемой многозадачности. Процесс, не выполняющий системных вызовов, может бесконечно управлять процессором. Вот почему современные операционные системы также являются *вытесняющими*, то есть даже если выполняющийся процесс не делал системного вызова, он может быть снова помещен в очередь, чтобы более важный процесс мог управлять ЦП.
 
 
 # Планировщик Linux
 
-Linux, как операционная система с вытеснительной многопроцессорной обработкой, реализует планировщик организующий очередь процессов. Точнее, планировщик также решает, какой *поток* в очереди будет выполняться - процесс может разветвляться на множество независимых потоков, но процесс и поток в этом контексте являются взаимозаменяемыми терминами. У каждого процесса есть два свойства, которые влияют на его планирование: *политика планирования* и *приоритет планирования*.
+Linux, как операционная система с вытеснительной многопроцессорной обработкой, реализует планировщик организующий очередь процессов. Точнее, планировщик также решает, какой *поток* в очереди будет выполняться - процесс может разветвляться на множество независимых потоков, но процесс и поток в этом контексте являются взаимозаменяемыми терминами. У каждого процесса есть две характеристики, которые влияют на его планирование: *политика планирования* и *приоритет планирования*.
 
-Существует два основных типа политик планирования: *политики реального времени* и *обычные политики*. Процессы в рамках политики реального времени планируются напрямую по их значениям приоритета. Если более важный процесс становится готовым к запуску, менее важный выполняемый процесс вытесняется, и процесс с более высоким приоритетом берет на себя управление ЦП. Процесс с более низким приоритетом получит управление ЦП, только если процессы с более высоким приоритетом простаивают или ждут ответа оборудования.
+Существует два основных типа политик планирования: *политики реального времени* и *стандартные политики*. Процессы в рамках политики реального времени планируются напрямую по их значениям приоритета. Если более приоритетный процесс становится готовым к запуску, менее приоритетный процесс вытесняется, и процесс с более высоким приоритетом берет на себя управление ЦП. Процесс с более низким приоритетом получит управление ЦП, только если процессы с более высоким приоритетом простаивают или ждут ответа оборудования.
 
-Любой процесс реального-времени имеет более высокий приоритет, чем обычный процесс. Как операционная система общего назначения Linux выполняет всего несколько процессов в реальном времени. Большинство процессов, включая системные и пользовательские программы, выполняются в соответствии с обычными политиками планирования. Нормальные процессы обычно имеют одинаковое значение приоритета, но нормальные политики могут определять правила приоритета выполнения, используя другой предикат процесса: *nice value*. Чтобы избежать путаницы с динамическими приоритетами, полученными из *nice value*, приоритеты планирования обычно называются приоритетами *статического* планирования.
+Любой процесс реального-времени имеет более высокий приоритет, чем обычный процесс. Как операционная система общего назначения Linux выполняет всего несколько процессов в реальном времени. Большинство процессов, включая системные и пользовательские программы, выполняются в соответствии со стандартными политиками планирования. Обычные процессы восновном обладают одинаковым значением приоритета, но стандартные политики могут устанавливать правила приоритета выполнения, используя другую характеристику процесса: *фактор уступчивости*. Чтобы избежать путаницы с динамическими приоритетами, полученными от фактора уступчивости, приоритеты планирования обычно называются *статическими* приоритетами планирования.
 
-Планировщик Linux можно настроить по-разному, и существуют даже более сложные способы установки приоритетов, но эти общие концепции применимы всегда. При проверке и настройке планирования процессов важно помнить, что это повлияет только на процессы, выполняемые в рамках обычной политики планирования.
+Планировщик Linux можно настроить по-разному, даже еще более сложными способами установки приоритетов, но эти общие концепции применимы всегда. При проверке и настройке планирования процессов важно помнить, что это повлияет только на процессы, выполняемые в рамках стандартной политики планирования.
 
 ## Просмотр приоритетов
 
