Update 103.6 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.6 Modify process execution priorities/103.6 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.6 Modify process execution priorities/103.6 Lesson 1.md
@@ -10,11 +10,11 @@
 
 # Введение
 
-Операционные системы, способные запускать более одного процесса одновременно, называются многозадачными или мультипроцессными системами. Хотя настоящая многозадачность возникает только тогда, когда доступно более одного процессора, даже однопроцессорные системы могут имитировать многозадачность, очень быстро переключаясь между процессами. Этот метод также используется в системах с множеством эквивалентных процессоров или *симметричных многопроцессорных (SMP)* системах, учитывая, что количество потенциальных параллельных процессов значительно превышает количество доступных процессоров.
+Операционные системы, способные запускать более одного процесса одновременно, называются многозадачными или многопроцессорными системами. Хотя настоящая многозадачность возникает только тогда, когда доступно более одного процессора, даже однопроцессорные системы могут имитировать многозадачность, очень быстро переключаясь между процессами. Учитывая, что потенциально возможное количество параллельных процессов значительно превышает количество доступных процессоров, то этот метод также используется и в системах с несколькими процессорами или *симметричных многопроцессорных системах(SMP)*.
 
-Фактически, только один процесс одновременно может управлять процессором. Однако большинство действий процесса являются системными вызовами, то есть выполняющийся процесс передает управление процессором процессу операционной системы, поэтому он выполняет запрошенную операцию. Системные вызовы отвечают за всю связь между устройствами, такую как распределение памяти, чтение и запись в файловых системах, печать текста на экране, взаимодействие с пользователем, сетевые передачи и т. д. Передача управления процессором во время системного вызова позволяет операционной системе решать, следует ли вернуть управление процессором предыдущему процессу или передать его другому процессу. Поскольку современные ЦП могут выполнять инструкции намного быстрее, чем большинство внешних устройств взаимодействуют друг с другом, новый процесс может занять большую часть процессорного времени, пока предыдущие запрошенные аппаратные ресурсы не освободятся. Чтобы обеспечить максимальное использование ЦП, многозадачные операционные системы поддерживают динамическую очередь активных процессов, ожидающих процессорное время.
+Фактически, только один процесс одновременно может управлять процессором. Однако, большинство действий процесса являются *системными вызовами*, то есть выполняющийся процесс передает управление CPU процессу операционной системы, поэтому он выполняет запрошенную операцию. Системные вызовы отвечают за всю связь между устройствами, такую как распределение памяти, чтение и запись в файловых системах, выаод текста на экране, взаимодействие с пользователем, передча информации по сети и т. д. Передача управления процессором во время системного вызова позволяет операционной системе решать, следует ли вернуть управление процессором предыдущему процессу или передать управление другому процессу. Поскольку современные CPU могут выполнять инструкции намного быстрее, чем большинство внешних устройств взаимодействуют друг с другом, новый процесс может занять большую часть процессорного времени, пока предыдущие запрошенные аппаратные ресурсы не освободятся. Чтобы обеспечить максимальное использование CPU, многозадачные операционные системы поддерживают динамическую очередь активных процессов, ожидающих процессорное время.
 
-Хотя системные вызовы и позволяют значительно улучшить использование процессорного времени, полагаться только на них для переключения между процессами недостаточно для достижения приемлемой многозадачности. Процесс, не выполняющий системных вызовов, может бесконечно управлять процессором. Вот почему современные операционные системы также являются *вытесняющими*, то есть даже если выполняющийся процесс не делал системного вызова, он может быть снова помещен в очередь, чтобы более важный процесс мог управлять ЦП.
+Хотя системные вызовы и позволяют значительно улучшить использование процессорного времени, полагаться только на них для переключения между процессами недостаточно для достижения достаточной производительности многопоточности. Процесс, не выполняющий системных вызовов, может бесконечно управлять процессором. Вот почему современные операционные системы, также называемые *вытесняющими*, то есть даже если выполняющийся процесс не делал системного вызова, он может быть снова помещен в очередь, чтобы более важный процесс мог управлять CPU.
 
 
 # Планировщик Linux
